Update for BfA 8.2 and Classic 1.13 support

--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -1,8 +1,10 @@
 package-as: WowheadLink_Grabber
 
-license-output: License.md
+license-output: LICENSE.txt
 
 manual-changelog: CHANGELOG.txt
 
 ignore:
-    - README.md
+  - README.md
+  - CHANGES.txt
+  - LICENSE.md
